# BharatQuest

./: .gitignore  Cargo.toml  README.md  curl_out.json  gen_bible.py  live_test.sh  metrics.db  render.yaml  scratch.rs  scratch_patch.c  scratch_test.rs  test_comp.rs  test_history.sh  test_imports.rs  test_pipe.rs  test_pool.rs
api/: Cargo.toml
api/src/: handlers.rs  handlers_test.rs  main.rs  middleware.rs  models.rs  state.rs
dashboard/: README.md  index.html  package-lock.json  package.json  ref.html
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentSimulator.tsx  HowItWorks.tsx  LatencyDistribution.tsx  LiveAgentDemo.tsx  MetricRow.tsx  Sidebar.tsx  TopBar.tsx  Waterfall.tsx
dashboard/src/hooks/: useRuntimes.ts  useTelemetry.ts
demo/: README.md  self-heal-demo.js  self-heal-server.js
docs/: BIBLE.md  DECISIONS.md  PITCH_AND_OPS.md
engine/: Cargo.toml  test_wasi.rs
engine/src/: debug_test.rs  error.rs  lib.rs  patch.py  patch_runtime.py  pool.rs  runtime.rs  sandbox.rs
engine/tests/: concurrency_test.rs  python_integration.rs
ffi-bridge/: Cargo.toml
ffi-bridge/src/: error.rs  lib.rs
quickjs-wasm/: Cargo.toml  build.sh  fetch-micropython.sh  wrapper.c
quickjs-wasm/src/: lib.rs
scratch/: load_test.py  load_test2.py  load_test_local.py
telemetry/: Cargo.toml
telemetry/src/: lib.rs
wasm-runtimes/: micropython-wrapper.c  python.wasm  quickjs.wasm
wasm-runtimes/tmp_download/: micropython_wasm-0.1a2-py3-none-any.whl
