[workspace]
members = [
    "engine",
    "api",
    "ffi-bridge",
    "quickjs-wasm",
    "telemetry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# WASM runtime
wasmtime = "29"
wasmtime-wasi = "29"

# Async runtime & web framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (async only — NEVER enable "blocking" feature)
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }
