[package]
name = "apatheia-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

apatheia-engine = { path = "../engine" }
apatheia-ffi-bridge = { path = "../ffi-bridge" }
apatheia-telemetry = { path = "../telemetry" }
