[package]
name = "apatheia-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

apatheia-engine = { path = "../engine" }
apatheia-ffi-bridge = { path = "../ffi-bridge" }
apatheia-telemetry = { path = "../telemetry" }
dashmap = "6.2.1"
governor = "0.10.4"

[dev-dependencies]
http-body-util = "0.1.0"
