[package]
name = "apatheia-engine"
version.workspace = true
edition.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

apatheia-telemetry = { path = "../telemetry" }
