[package]
name = "apatheia-engine"
version.workspace = true
edition.workspace = true

[dependencies]
wasmtime = { features = ["pooling-allocator", "cranelift"], version = "45" }
wasmtime-wasi = "45"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

apatheia-telemetry = { path = "../telemetry" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
