[package]
name = "apatheia-ffi-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

apatheia-telemetry = { path = "../telemetry" }
url = "2.5.8"

[dev-dependencies]
axum.workspace = true
